--- a/popup.html
+++ b/popup.html
@@ -39,7 +39,7 @@
 
   document.getElementById('btnClose').addEventListener('click', function(){
     tryOpen();
-    self.close();
+    //self.close();
   });
 
   // (옵션) 모바일 환경에서 바로 닫히는지 확인하려면 터치 이벤트 안에서도 시도 가능
