--- a/popup.html
+++ b/popup.html
@@ -38,7 +38,9 @@
   }
 
   document.getElementById('btnClose').addEventListener('click', function(){
+alert("test");
     tryOpen();
+
     //self.close();
   });
 
